RESOLVED FIXED312167
FontFace: Reject with SyntaxError when immediate buffer source fails to parse
https://bugs.webkit.org/show_bug.cgi?id=312167
Summary FontFace: Reject with SyntaxError when immediate buffer source fails to parse
Vitor Roriz
Reported 2026-04-13 10:24:26 PDT
Per the CSS Font Loading spec, when a FontFace is constructed from a BufferSource and the data fails to parse, the loaded promise should reject with SyntaxError instead of NetworkError. NetworkError is reserved for URL-based fetch failures.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-13 10:24:34 PDT
Vitor Roriz
Comment 2 2026-04-13 10:38:03 PDT
EWS
Comment 3 2026-04-13 16:30:49 PDT
Committed 311146@main (3afc1f7690c9): <https://commits.webkit.org/311146@main> Reviewed commits have been landed. Closing PR #62645 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.