FontFace: Reject with SyntaxError when immediate buffer source fails to parse https://bugs.webkit.org/show_bug.cgi?id=312167 rdar://174669738

Reviewed by Brent Fulgham.

Per the CSS Font Loading spec §2.1, when a FontFace is constructed
from a BufferSource and the data fails to parse as a font, the loaded
promise should reject with SyntaxError. NetworkError is reserved for
URL-based fetch failures (§2.2).
https://drafts.csswg.org/css-font-loading/#font-face-constructor

* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-invalid-arraybuffer-expected.txt:
* Source/WebCore/css/FontFace.cpp:
(WebCore::FontFace::create):
(WebCore::FontFace::fontStateChanged):
* Source/WebCore/css/FontFace.h:

Canonical link: https://commits.webkit.org/311146@main